discussion/kv_engine/163999/163999_rev24_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49071: Make engine-specific storage type-safe [1/2]

Using an interface type for the engine-specific storage allows us to
avoid reinterpret_casts from void* and to use smart pointers for
automatic memory management of objects with lifetime bound by the
command context.

This will be a two-part patch. This first part swaps out the underlying
void* storage with EngineStorageIface and ensures that memory
allocations are correctly accounted for, but it does not change the
interface of the (get|set)EngineStorage methods we use in
EventuallyPersistentEngine to acccess the stored data.

I will refactor those methods and their callers to EngineStorageIface
in a follow-up patch.

Change-Id: Idadd77ded7a7be14bf7ca290f7aa29861f294442

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-09-12 13:54:52.000000000
Message: 
Uploaded patch set 24.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-12 14:14:58.000000000
Message: 
Patch Set 24: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21637/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21637/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20309/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/utilities/engine.cc:25:12: error: no matching conversion for functional-style cast from "std::weak_ptr<std::atomic_bool>" (aka "weak_ptr<atomic<bool> >") to "cb::IsValidInstanceFlag" [clang-diagnostic-error]
    return cb::IsValidInstanceFlag(
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:249:8: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "std::weak_ptr<std::atomic_bool>" (aka "weak_ptr<atomic<bool> >") to "const cb::IsValidInstanceFlag" for 1st argument
struct IsValidInstanceFlag {
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:249:8: note: candidate constructor (the implicit move constructor) not viable: no known conversion from "std::weak_ptr<std::atomic_bool>" (aka "weak_ptr<atomic<bool> >") to "cb::IsValidInstanceFlag" for 1st argument
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:251:5: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
    IsValidInstanceFlag() = default;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:253:48: error: template argument for template type parameter must be a type [clang-diagnostic-error]
    explicit IsValidInstanceFlag(std::weak_ptr<std::atomic_bool> ptr)
                                               ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:684:21: note: template parameter is declared here
  template<typename _Tp>
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:253:53: error: no member named "atomic_bool" in namespace "std"; did you mean "atomic_load"? [clang-diagnostic-error]
    explicit IsValidInstanceFlag(std::weak_ptr<std::atomic_bool> ptr)
                                                    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr_atomic.h:111:5: note: "atomic_load" declared here
    atomic_load(const shared_ptr<_Tp>* __p)
    ^
note: this fix will not be applied because it overlaps with another fix
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:253:53: error: no template named "atomic_bool" in namespace "std"; did you mean "atomic_load"? [clang-diagnostic-error]
    explicit IsValidInstanceFlag(std::weak_ptr<std::atomic_bool> ptr)
                                                    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr_atomic.h:111:5: note: "atomic_load" declared here
    atomic_load(const shared_ptr<_Tp>* __p)
    ^
note: this fix will not be applied because it overlaps with another fix
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:259:20: error: no viable conversion from returned value of type "std::__shared_ptr_access<std::atomic<bool>, __gnu_cxx::_S_atomic, false, false>::element_type" (aka "std::atomic<bool>") to function return type "bool" [clang-diagnostic-error]
            return *strong;
                   ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20309/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/utilities/engine.cc:25:12:
error: no matching conversion for functional-style cast from "std::weak_ptr<std::atomic_bool>" (aka "weak_ptr<atomic<bool> >") to "cb::IsValidInstanceFlag" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20309/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49292/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\include\memcached/types.h(253): error C2039: "atomic_bool": is not a member of "std" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49292/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41433/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/memcached/types.h:253:53:
error: no template named "atomic_bool" in namespace "std"; did you mean "atomic_load"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41433/ )

CMake error: CMakeLists.txt:166 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41433/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10017/ : FAILURE

Compile error at [2022-09-12T13:56:33.131Z] ../kv_engine/include/memcached/types.h:253:53:
error: no template named "atomic_bool" in namespace "std"; did you mean "atomic_load"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10017/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10115/ : FAILURE

Compile error at [2022-09-12T13:58:17.078Z] ../kv_engine/include/memcached/types.h:253:53:
error: ?atomic_bool? is not a member of ?std?; did you mean ?atomic_load??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10115/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22281/ : FAILURE

Compile error at [2022-09-12T14:03:05.951Z] ../kv_engine/include/memcached/types.h:253:53:
error: ?atomic_bool? is not a member of ?std?; did you mean ?atomic_load??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22281/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22641/ : FAILURE

Compile error at [2022-09-12T13:59:52.921Z] ../kv_engine/include/memcached/types.h:253:53:
error: ?atomic_bool? is not a member of ?std?; did you mean ?atomic_load??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22641/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23404/ : FAILURE

Compile error at [2022-09-12T13:59:32.426Z] ../kv_engine/include/memcached/types.h:253:53:
error: no template named "atomic_bool" in namespace "std"; did you mean "atomic_load"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23404/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30682/ : FAILURE

Compile error at [2022-09-12T14:01:05.620Z] ../kv_engine/include/memcached/types.h:253:53:
error: no template named "atomic_bool" in namespace "std"; did you mean "atomic_load"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30682/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19531/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
